tests/negative/test_data_nested_decl.orb
data Foo;

data Bar {
    f:Foo
};

fnc main() () {}